listener: Implement both plain text and SSL layer
Signed-off-by: Michal Novotny <mignov@gmail.com>

--- a/README
+++ b/README
@@ -34,11 +34,12 @@ Pre-requisite software
 
 Where versions are noted below these are the versions tested to definitely
 work. For some of them you may be able to run with earlier releases, so
-please report any success to the mailing lists
+please report any success to the mailing lists.
 
  dl
  rt
  libxml2
+ openssl
 
 Copyright /  License
 --------------------
